fix(app): globe visible behind story modules

--- a/src/scripts/components/stories/story/story.module.css
+++ b/src/scripts/components/stories/story/story.module.css
@@ -6,7 +6,6 @@
   grid-area: content;
 
   color: #fff;
-  background-color: var(--neutral-esa-background);
   overflow: scroll;
   height: var(--story-height);
   position: relative;
